# LocalAreaInterconnection

./: .gitignore  FUNCTIONAL_DESIGN.md  IMPLEMENTATION_PROGRESS.md  README.md  UI_STYLE_GUIDE.md  build-and-run-exe.bat  build-exe.bat  build-exe.ps1  build-latest-exe.bat
.run/: Build and run Windows exe.run.xml  Build latest Windows exe.run.xml
assets/: game-profiles.example.json
docs/: ARCHITECTURE.md  M0_RESEARCH_TEMPLATE.md  M1_NETWORK_EXPERIMENT.md
native/: Cargo.toml
native/crates/lai-cli/: Cargo.toml
native/crates/lai-cli/src/: cli_args.rs  connection_paths.rs  coordination_http.rs  main.rs  nat_direct.rs
native/crates/lai-cli/tests/: cli_smoke.rs
native/crates/lai-core/: Cargo.toml
native/crates/lai-core/src/: broadcast_policy.rs  command_execution.rs  connection_path.rs  coordination_room_view.rs  coordination_store.rs  diagnostic_export.rs  diagnostics.rs  encrypted_tunnel.rs  firewall_diagnostics.rs  firewall_plan.rs  game_network_plan.rs  game_profile.rs  game_profile_catalog.rs  game_readiness.rs  invite.rs  ip.rs  join_plan.rs  lib.rs  nat_traversal.rs  network_observation.rs  p2p_handshake.rs  packet_observation_parser.rs  relay_fallback_plan.rs  room.rs  room_lifecycle.rs  room_runtime_plan.rs  runtime_cleanup_plan.rs  runtime_observation.rs  udp_forwarding.rs  virtual_adapter_ensure.rs  virtual_adapter_plan.rs  virtual_packet_io.rs  windows_adapter_parser.rs  windows_firewall_parser.rs  windows_netstat_parser.rs  windows_ping_parser.rs  windows_route_parser.rs  wintun_adapter.rs  wintun_adapter_delete.rs  wintun_adapter_open.rs  (+5 more)
(+23 files in other folders)
