[workspace]
members = [
  "crates/lai-core",
  "crates/lai-cli"
]
resolver = "2"

[workspace.package]
edition = "2021"
license = "UNLICENSED"
version = "0.1.0"

[workspace.dependencies]
base64 = "0.22"
clap = { version = "4.5", features = ["derive"] }
hmac = "0.12"
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
thiserror = "1.0"
